// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskLine component tests TaskLine for Completed task Matches Snapshot 1`] = `
<div
  className="taskLine"
>
  <div
    className="container"
  >
    <div
      className="round"
    >
      <input
        checked={false}
        id="checkbox1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox1"
      />
    </div>
  </div>
  <div
    className="uncompletedTaskText"
  >
    text
  </div>
  <div
    className="deleteBlock"
  >
    <button
      className="deleteButton"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="BsXLg"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`TaskLine component tests TaskLine for Uncompleted task Matches Snapshot 1`] = `
<div
  className="taskLine"
>
  <div
    className="container"
  >
    <div
      className="round"
    >
      <input
        checked={true}
        id="checkbox1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox1"
      />
    </div>
  </div>
  <div
    className="completedTaskText"
  >
    text
  </div>
  <div
    className="deleteBlock"
  >
    <button
      className="deleteButton"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="BsXLg"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
